SONAR-13643 Save plugins with type